fix: undefined variabel
