# swagger_output.json
@@ -7071,21 +7071,14 @@
         "description": "",
         "parameters": [
           {
-            "name": "user-agent",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "state",
+            "name": "code",
             "in": "query",
             "schema": {
               "type": "string"
             }
           },
           {
-            "name": "code",
+            "name": "state",
             "in": "query",
             "schema": {
               "type": "string"
@@ -7136,21 +7129,14 @@
         "description": "",
         "parameters": [
           {
-            "name": "user-agent",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "state",
+            "name": "code",
             "in": "query",
             "schema": {
               "type": "string"
             }
           },
           {
-            "name": "code",
+            "name": "state",
             "in": "query",
             "schema": {
               "type": "string"
